--- a/src/index.css
+++ b/src/index.css
@@ -233,10 +233,6 @@ button:focus-visible {
   width: 50% !important;
   margin: auto !important;
 }
-.menutab.menutab2 {
-  width: 50% !important;
-  margin: auto !important;
-}
 .menutab {
   --duration: 0.7s;
   --bgColorMenu: #1d1d27;
@@ -328,4 +324,52 @@ button:focus-visible {
   width: 8em;
   height: 1em;
   bottom: -40%;
+}
+
+.animate-fadeInUp {
+  animation: fadeInUp 0.5s ease-out forwards;
+}
+.animate-slideIn {
+  animation: slideIn 0.8s cubic-bezier(0.22, 1, 0.36, 1) forwards;
+}
+
+.animate-slideOut {
+  animation: slideOut 0.6s cubic-bezier(0.4, 0, 0.2, 1) forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-120%);
+    opacity: 0;
+    background: linear-gradient(90deg, #febe10, #fff7cc);
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+    background: white;
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+    background: white;
+  }
+  100% {
+    transform: translateX(-120%);
+    opacity: 0;
+    background: linear-gradient(90deg, #febe10, #fff7cc);
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
